--- a/.env_template
+++ b/.env_template
@@ -1,9 +1,9 @@
 # Git credentials
-GIT_NAME=""
-GIT_EMAIL=""
-REPO_URL=""
+GIT_NAME="nizarbabsel"
+GIT_EMAIL="embahku@gmail.com"
+REPO_URL="https://github.com/nizarbabsel/node"
 BRANCH_NAME="main"
 
 # DO NOT EDIT if you don't know
 DATA_PATH="./data/date.json"
-LOAD_COMMIT=100
+LOAD_COMMIT=1000
