--- a/.env_template
+++ b/.env_template
@@ -1,7 +1,7 @@
 # Git credentials
 GIT_NAME="nizarbabsel"
 GIT_EMAIL="embahku@gmail.com"
-REPO_URL="https://github.com/nizarbabsel/node"
+REPO_URL="https://github.com/nizarbabsel/project-matic"
 BRANCH_NAME="main"
 
 # DO NOT EDIT if you don't know
